 . Actions: added 2 new instant actions: FlipX and FlipY (counter-rollback of part issue #620)
 . Sprite: anchor + offset + scale works  (issue #671)
 . SpriteFrame: removed support for flipX and flipY  (rollback of a part issue #620)
 . SpriteFrameCache: If originalSize is not present, display warning (issue #670)
 . SpriteSheet: adding grand-children doesn't crash (issue #676)
 . TMXTiledMap: added support for object and objectgroup (issue #636)
 
version 0.9.0-beta - 14-Dic-2009
 . ActionManager: fixed leak (issue #635)
 . Actions: using [self class]. Easier to subclass (issue #655)
 . Box2d: updated to r31 (pre 2.1.0) (issue #494)
 . Chipmunk: updated to v5.0 (issue #664)
 . CocosDenshion: support for detecting ringer/mute switch state (issue #593)
 . CocosDenshion: doesn't crash when file has no extension (issue #595)
 . ColorLayer: supports Blend Protocol (issue #597)
 . Node: vertexZ is translated just once (issue #641)
 . Director: call schedulers before glClear in mainLoop (part of issue #533)
 . Director: "global" NSBundle to facilitate the integration of more than 1 game (issue #654)
 . Particles: code easier to mantain, same performance
 . Particles: small performance improvement (issue #661)
 . SpriteSheet: supports any level of sub-children (issue #346, issue #665)
 . Sprite: supports "honor parent transform" (issue #643)
 . Sprite: displayFrame renamed to displayedFrame (issue #XXX)
 . Sprite: fixed zwoptex offset & anchorPoint (issue #653)
 . Sprite: setDisplayFrame works OK with different texture sizes (issue #666)
 . Templates: using SDK 3.0 as base SDK
 . Textures: supports mipmap generation (issue #632)
 . Texture Atlas: uses VBO instead of vertex array list (issue #581)
 . TextureCache: don't use autorelease pool to load images (issue #XXX)
 . Tiles: TMX maps supports sub-directories (issue #539)
 . Transition: added CrossFadeTransition (issue #646)

version 0.9.0-alpha - 18-Nov-2009
 . All: using CC namespace (issue #520)